--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io('http://localhost:3001');
+      var socket = io('https://my-chatserver.herokuapp.com');
       $('form').submit(function(){
         // This won't work since this code is run in client browser,
         // which has no knowledge on Docker internal.
